--- a/MANIFIESTO/MANIFIESTO.html
+++ b/MANIFIESTO/MANIFIESTO.html
@@ -9,12 +9,11 @@
 </head>
 <body>
 <h1 id="manifiesto-del-laboratorio-de-software-libre">Manifiesto del Laboratorio de Software Libre</h1>
-<h2 id="área-transdepartamental-de-artes-multimediales-de-la-universidad-nacional-del-arte">Área Transdepartamental de Artes Multimediales de la Universidad Nacional del Arte</h2>
 <p>El uso de Software Libre permite autonomía tecnológica, estandarización e integración, seguridad, independencia, democratización de la información y ahorro de recursos.</p>
-<p>Creemos que el uso de herramientas propietarias contribuye a lograr una fuerte dependencia en las mismas. En contrapartida, mediante las herramientas libres, se le brinda al usuario la posibilidad de conocer la implementación de las mismas y los fundamentos tecnológicos en los que éstas se basan. El Software Libre permite el uso irrestricto, el análisis y la reutilización de los programas impulsando así fuertemente el intercambio de conocimientos y la colaboración.</p>
+<p>Creemos que el uso de herramientas propietarias genera una fuerte dependencia. En contrapartida, mediante las herramientas libres, se le brinda al usuario la posibilidad de conocer la implementación de las mismas y los fundamentos tecnológicos en los que éstas se basan. El Software Libre permite el uso irrestricto, el análisis y la reutilización de los programas impulsando así fuertemente el intercambio de conocimientos y la colaboración.</p>
 <p>En el espíritu de forjar condiciones favorables a nuestra comunidad académica en aras de conseguir una óptima inclusión digital, favorecer la independencia digital y fortalecer la adopción y la creación de software libre es menester fijar las bases de nuestro accionar en el Software libre y el modelo cultural que promueve.</p>
 <p>Creemos que éste es el presupuesto fundamental para enmarcar el avance y devenir tecnológico dentro de los modelos y circuitos libres, que son los únicos que nuestra comunidad académica debe promulgar en virtud del acervo cultural que constituyen y las facilidades que representan.</p>
-<h1 id="objetivos">Objetivos</h1>
+<h2 id="objetivos">Objetivos</h2>
 <ul>
 <li>Difundir y estrechar el vínculo entre las nuevas tecnologías (estudio, uso y creación) y nuestra comunidad educativa.</li>
 <li>Crear un punto de encuentro para promover los estándares libres entre la comunidad universitaria y también en la sociedad.</li>
