mas slides... sip

--- a/ATAMISHKY/SLIDES/presentacion.html
+++ b/ATAMISHKY/SLIDES/presentacion.html
@@ -46,14 +46,14 @@
 </ul>
 </section>
 <section id="logo" class="slide level1">
-<h1><img src="/logo-lab.png" alt="logo" /></h1>
+<h1><img src="/img/logo-lab.png" alt="logo" /></h1>
 <ul>
 <li class="fragment">Gustavo Yzaguirre</li>
 <li class="fragment">Lisandro Fernández</li>
 </ul>
 </section>
-<section id="con-la-ayuda-de..." class="slide level1">
-<h1>Con la ayuda de...</h1>
+<section id="con-mucha-ayuda-de..." class="slide level1">
+<h1>Con mucha ayuda de...</h1>
 <ul>
 <li class="fragment">Juan Martín Viera</li>
 <li class="fragment">Mediateca</li>
@@ -65,9 +65,10 @@
 <li class="fragment">Necesidad de presencia online</li>
 <li class="fragment">El software de escritorio <strong>no es suficiente</strong></li>
 <li class="fragment">Un pdf <strong>no es suficiente</strong></li>
+<li class="fragment">Subir nuestro catálogo a un sistema ajeno <strong>no es suficiente</strong></li>
 <li class="fragment">Tarde para adoptar alguna herramienta prexistente</li>
 <li class="fragment">Pobre compatibilidad entre distintos softwares encargados de la tarea</li>
-<li class="fragment">Dificultad de adaptar nuestro catálogo a otros formatos prácticos</li>
+<li class="fragment">Escollo de adaptar nuestro catálogo a otros formatos prácticos</li>
 </ul>
 </section>
 <section id="idea" class="slide level1">
@@ -80,6 +81,10 @@
 <li class="fragment">Ofrecer una herramienta <strong>amigable a los usuarios</strong></li>
 </ul>
 </section>
+<section class="slide level1">
+
+<p><em>Creemos que <strong>no es solamente nuestro problema</strong>...</em></p>
+</section>
 <section id="solución" class="slide level1">
 <h1>Solución</h1>
 <ul>
@@ -88,6 +93,10 @@
 <li class="fragment">Programarla utilizando <strong>estándares libres</strong></li>
 <li class="fragment">Programarla para resultar fácil, intuitiva...</li>
 </ul>
+</section>
+<section class="slide level1">
+
+<p><em>Una <strong>herramienta de búsqueda online</strong> parecía ser la respuesta...</em></p>
 </section>
 <section id="trabajo" class="slide level1">
 <h1>Trabajo</h1>
@@ -117,8 +126,8 @@
 <section id="puntualmente" class="slide level1">
 <h1>Puntualmente</h1>
 <ul>
-<li class="fragment"><p>Es un sistema <strong>web</strong> de <strong>búsqueda</strong> de material bibliográfico.</p></li>
-<li class="fragment"><p>Como <strong>koha</strong>, <strong>greenstone</strong> y <strong>SIU Biblioteca</strong>, pero...</p></li>
+<li class="fragment"><p>Es un sistema <strong>web</strong> de <strong>búsqueda</strong> y <strong>gestión</strong> de material bibliográfico.</p></li>
+<li class="fragment"><p>Como <strong><a href="https://koha-community.org">koha</a></strong>, <strong><a href="http://www.greenstone.org">greenstone</a></strong> y <strong><a href="http://bsd.siu.edu.ar/prod/index.php">SIU Biblioteca</a></strong>, pero...</p></li>
 </ul>
 </section>
 <section id="nuestro" class="slide level1">
@@ -136,7 +145,7 @@
 </ul>
 </section>
 <section id="meme" class="slide level1">
-<h1><img src="/sospecha.png" alt="meme" /></h1>
+<h1><img src="/img/sospecha.png" alt="meme" /></h1>
 <ul>
 <li class="fragment">PRUEBAS!</li>
 </ul>
@@ -152,6 +161,12 @@
 </ul></li>
 </ul>
 </section>
+<section id="busq" class="slide level1">
+<h1><img src="/img/busqueda.png" alt="busq" /></h1>
+</section>
+<section id="criterios" class="slide level1">
+<h1><img src="/img/criterios.png" alt="criterios" /></h1>
+</section>
 <section class="slide level1">
 
 <ul>
@@ -163,6 +178,15 @@
 </ul></li>
 </ul>
 </section>
+<section id="autores" class="slide level1">
+<h1><img src="/img/autores.png" alt="autores" /></h1>
+</section>
+<section id="bib" class="slide level1">
+<h1><img src="/img/bibliografias.png" alt="bib" /></h1>
+</section>
+<section id="tags" class="slide level1">
+<h1><img src="/img/nubetags.png" alt="tags" /></h1>
+</section>
 <section class="slide level1">
 
 <ul>
@@ -172,6 +196,12 @@
 <li class="fragment">préstamos</li>
 </ul></li>
 </ul>
+</section>
+<section id="libro" class="slide level1">
+<h1><img src="/img/entrada.png" alt="libro" /></h1>
+</section>
+<section id="prestamos" class="slide level1">
+<h1><img src="/img/prestamos.png" alt="prestamos" /></h1>
 </section>
 <section class="slide level1">
 
@@ -184,6 +214,9 @@
 </ul></li>
 </ul>
 </section>
+<section id="apa" class="slide level1">
+<h1><img src="/img/APA_Compartir.png" alt="apa" /></h1>
+</section>
 <section class="slide level1">
 
 <ul>
@@ -195,6 +228,15 @@
 <li class="fragment">Twitter</li>
 <li class="fragment">mail</li>
 </ul></li>
+</ul>
+</section>
+<section id="social" class="slide level1">
+<h1><img src="/img/social.jpg" alt="social" /></h1>
+</section>
+<section id="cool" class="slide level1">
+<h1><img src="/img/cool.png" alt="cool" /></h1>
+<ul>
+<li class="fragment">Muy lindo pero...</li>
 </ul>
 </section>
 <section id="dónde-está-el-catálogo" class="slide level1">
@@ -229,7 +271,7 @@
 <section id="ahora-mismo" class="slide level1">
 <h1>Ahora mismo</h1>
 <ul>
-<li class="fragment">Es uno de los proyectos de Laboratorio de Software Libre</li>
+<li class="fragment">Es uno de los proyectos del Laboratorio de Software Libre</li>
 <li class="fragment">Atamishky está en constante desarrollo y revisión</li>
 <li class="fragment">y...</li>
 </ul>
@@ -244,9 +286,7 @@
 </section>
 <section id="gracias" class="slide level1">
 <h1>Gracias!</h1>
-<ul>
-<li class="fragment">Gustavo Yzaguirre et al, 2016. <img src="/una.jpg" alt="una" /></li>
-</ul>
+<p><img src="/img/una.jpg" alt="una" /> <img src="/img/logo-lab.png" alt="logo" /></p>
 </section>
 <section id="enlaces" class="slide level1">
 <h1>Enlaces</h1>
@@ -254,6 +294,7 @@
 <li class="fragment"><a href="https://mediateca.atamvirtual.com.ar">Catálogo online de la Mediateca</a>.</li>
 <li class="fragment"><a href="https://labsl.multimediales.com.ar">Página del Laboratorio de Software Libre</a>.</li>
 <li class="fragment"><a href="https://github.com/LABSL-ATAM">Repositorio oficial en Github</a>.</li>
+<li class="fragment"><a href="https://github.com/LABSL-ATAM/atamishky">Repositorio oficial Atamishky Github</a>.</li>
 <li class="fragment"><a href="mailto:labsl@cpamvirtual.com.ar">Correo del LABSL</a>.</li>
 </ul>
 </section>
